feature (PSA-9): dynamic views 'user dashboard' and 'ticket details'

--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -6,57 +6,34 @@
 </head>
 <body>
 <header>USER DASHBOARD</header>
-<p th:text="'WITAJ: ' + ${username}"></p>
+<p th:text="'WELCOME: ' + ${username.getUserNameAndSurename()}"></p>
 <p></p>
-<table>
-    <tr>
-        <th>USER</th>
-    </tr>
-    <tr th:each="ticket : ${tickets}">
-        <td th:text="${ticket.getAuthor().getEmail()}"></td>
-    </tr>
-</table>
+
+<p th:text="'You have currently ' + ${noofopentickets} + ' open tickets.'"></p>
+
+<p>Here are your open tickets:</p>
 
 <table>
     <tr>
-        <th>USER</th>
-    </tr>
-    <tr th:each="ticket : ${ticketsbytitle}">
-        <td th:text="${ticket.getAuthor().getEmail()}"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <th>USER</th>
-    </tr>
-    <tr th:each="ticket : ${byauthor}">
-        <td th:text="${ticket.getAuthor().getEmail()}"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <th>USER</th>
-        <th>USER</th>
+        <th>ID</th>
+        <th>DESC</th>
+        <th>AUTHOR</th>
+        <th>RESPONSIBLE</th>
+        <th>STATUS</th>
+        <th>EDIT</th>
     </tr>
     <tr th:each="ticket : ${usertickets}">
+        <td th:text="${ticket.getId()}"></td>
         <td th:text="${ticket.getDescription()}"></td>
         <td th:text="${ticket.getAuthor().getEmail()}"></td>
+        <td th:text="${ticket.getResponsible().getEmail()}"></td>
+        <td th:text="${ticket.getStatus()}"></td>
+        <td>
+            <a th:href="@{/ticketdetails/{id} (id=${ticket.getId()})}" type="button">VIEW DETAILS</a>
+        </td>
     </tr>
 </table>
-<!--<table>-->
-<!--    <tr>-->
-<!--        <th>USER</th>-->
-<!--        <th>PASSWORD</th>-->
-<!--        <th>ROLE</th>-->
-<!--    </tr>-->
-<!--    <tr th:each="ticket : ${usertickets}">-->
-<!--        <td th:text="${ticket.getDescription()}"></td>-->
-<!--        <td th:text="${ticket.getAuthor()}"></td>-->
-<!--        <td th:text="${ticket.getCreatedOn()}"></td>-->
-<!--    </tr>-->
-<!--</table>-->
+
 
 <p>
     <a href="../home.html" th:href="@{/}">Return to home</a>
