--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,11 +7,7 @@
 <body>
 
 <h1>Users:</h1>
-<div th:each="user : ${users}">
-    <p th:text="'Email: ' + ${user.getEmail()}"></p>
-    <p th:text="'Password: ' + ${user.getPassword()}"></p>
-</div>
-
+//napraw widok szczegolow
 <table>
     <tr>
         <th>USER</th>
