--- a/src/main/resources/templates/newticket.html
+++ b/src/main/resources/templates/newticket.html
@@ -11,9 +11,10 @@
 
     <div class="p-3 p-lg-5 border">
         <div class="form-group row">
+
             <div class="col-md-6">
-                <label for="c_name" class="text-black">Title<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="c_name" th:field="*{title}">
+                <label for="c_price" class="text-black">Title<span class="text-danger">*</span></label>
+                <input type="text" class="form-control" id="c_price" th:field="*{title}">
             </div>
             <div class="col-md-6">
                 <label for="c_price" class="text-black">Description<span class="text-danger">*</span></label>
@@ -40,11 +41,16 @@
         </div>
         <div class="form-group row">
             <div class="col-lg-12">
-                <input type="submit" class="btn btn-primary btn-lg btn-block" value="Dodaj produkt">
+                <input type="submit" class="btn btn-primary btn-lg btn-block" value="ADD TICKET">
             </div>
         </div>
     </div>
 </form>
+
+<hr>
+<p>
+    <a href="../home.html" th:href="@{/}">Return to home</a>
+</p>
 
 </body>
 </html>
