feature (PSA-17): Email Messages when new ticket and new comment are created

--- a/src/main/resources/templates/newticket.html
+++ b/src/main/resources/templates/newticket.html
@@ -13,16 +13,16 @@
         <div class="form-group row">
 
             <div class="col-md-6">
-                <label for="c_price" class="text-black">Title<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="c_price" th:field="*{title}">
+                <label for="c_price" class="text-black">Title<span class="text-danger"></span></label>
+                <input type="text" class="form-control" id="c_price" th:field="*{title}" required>
             </div>
             <div class="col-md-6">
-                <label for="c_price" class="text-black">Description<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="c_price" th:field="*{description}">
+                <label for="c_price" class="text-black">Description<span class="text-danger"></span></label>
+                <input type="text" class="form-control" id="c_price" th:field="*{description}" required>
             </div>
             <div class="col-md-6">
-                <label for="c_price" class="text-black">Proposed Solution<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="c_price" th:field="*{proposedSolution}">
+                <label for="c_price" class="text-black">Proposed Solution<span class="text-danger"></span></label>
+                <input type="text" class="form-control" id="c_price" th:field="*{proposedSolution}" required>
             </div>
             <div class="col-md-6">
                 <label for="c_price" class="text-black">DROPDOWN TicketType<span class="text-danger">*</span></label>
