--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,7 +10,7 @@
 <table>
     <tr>
         <th>USER</th>
-        <th>PASSWORD</th>
+        <th>NAME & SURENAME</th>
         <th>ROLE</th>
         <th>UPDATE</th>
     </tr>
@@ -18,7 +18,7 @@
 
         <!--            <input type="text" class="form-control" id="c_price" th:field="*{title}">-->
         <td th:text="${user.getEmail()}"></td>
-        <td th:text="${user.getPassword()}"></td>
+        <td th:text="${user.getNameSurename()}"></td>
         <td th:text="${user.getRole()}"></td>
         <td>
             <form th:action="@{/users/updateForm}" method="post" th:object="${usersList}">
