--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -11,16 +11,24 @@
 
 <div th:if="${param.logout}"> You have been logged out.</div>
 
-<form th:action="@{/appLogin}" method="post">
+<form th:action="@{/login}" method="post">
 
-     User Email: <input type="email" name="email"/> <br/><br/>
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username"/>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password"/>
+    <div class="form-actions">
+        <button type="submit" class="btn">Log in</button>
+    </div>
 
-   Password: <input type="password" name="password"/><br/><br/>
-    <input id="remember-me" name="remember-me" type="checkbox"/>
-    <label for="remember-me" class="inline">Zapamiętaj mnie</label>
+<!--     User Email: <input type="email" id="email" name="email"/> <br/><br/>-->
+
+<!--   Password: <input type="password" id="password" name="password"/><br/><br/>-->
+<!--    <input id="remember-me" name="remember-me" type="checkbox"/>-->
+<!--    <label for="remember-me" class="inline">Zapamiętaj mnie</label>-->
 
 
-    <input type="submit" value="Sign In"/>
+<!--    <input type="submit" value="Sign In"/>-->
 
 </form>
 
