--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -9,10 +9,13 @@
     <input type="submit" value="Logout"/>
 </form>
 <p>
-    <a href="../newticket.html" th:href="@{/tickets}">CREATE NEW TICKET</a>
+    <a href="../newticket.html" th:href="@{/tickets/add}">CREATE NEW TICKET</a>
 </p>
 <p>
     <a href="../alltickets.html" th:href="@{/tickets/all}">VIEW ALL TICKETS</a>
+</p>
+<p>
+    <a href="../ticketsView.html" th:href="@{/tickets/}">VIEW SORTED TICKETS</a>
 </p>
 <div th:if="${username.getRole().toString().equals('ADMIN')}">
     <p>
