--- a/src/main/resources/templates/ticketdetails.html
+++ b/src/main/resources/templates/ticketdetails.html
@@ -10,64 +10,92 @@
 <p th:text="'TITLE: ' + ${selectedticket.getTitle()}"></p>
 <p th:text="'DESCRIPTION: ' + ${selectedticket.getDescription()}"></p>
 <p th:text="'PROPOSED SOLUTION: ' + ${selectedticket.getProposedSolution()}"></p>
-<p th:text="'STATUS: ' + ${selectedticket.getStatus()}"></p>
-<p th:text="'TICKET TYPE: ' + ${selectedticket.getTicketType()}"></p>
-<p th:text="'AUTHOR: ' + ${selectedticket.getAuthor().getNameSurename()}"></p>
-<p th:text="'RESPONSIBLE: ' + ${selectedticket.getResponsible().getNameSurename()}"></p>
-<p th:text="'CREATED ON: ' + ${selectedticket.getCreatedOn()}"></p>
-<p th:text="'PROPOSED SOLUTION : ' + ${selectedticket.getProposedSolution()}"></p>
+<p th:text="'PHOTO : ' + ${selectedticket.getTicketPhoto()}"></p>
 
 <hr>
 
 <p>COMMENTS:</p>
 
-<table>
-    <tr>
-        <th>ID</th>
-        <th>CREATED ON</th>
-        <th>AUTHOR</th>
-        <th>COMMENT</th>
-    </tr>
+<!--<table>-->
+<!--    <tr>-->
+<!--        <th>ID</th>-->
+<!--        <th>CREATED ON</th>-->
+<!--        <th>AUTHOR</th>-->
+<!--        <th>COMMENT</th>-->
+<!--    </tr>-->
 
 
-    <tr th:each="comment : ${selectedticket.getComments()}">
-        <td th:text="${comment.getId()}"></td>
-        <td th:text=" ${comment.getCreatedOn()}"></td>
-        <td th:text="${comment.getAuthor().getNameSurename()}"></td>
-        <td th:text="${comment.getCommentDesc()}"></td>
+<!--    <tr th:each="comment : ${selectedticket.getComments()}">-->
+<!--        <td th:text="${comment.getId()}"></td>-->
+<!--        <td th:text=" ${comment.getCreatedOn()}"></td>-->
+<!--        <td th:text="${comment.getAuthor().getNameSurename()}"></td>-->
+<!--        <td th:text="${comment.getCommentDesc()}"></td>-->
 
-    </tr>
-</table>
+<!--    </tr>-->
+<!--</table>-->
 
-<form th:action="@{/tickets/{id}/comment/new (id=${selectedticket.getId()})}" method="post" th:object="${comment}">
+<!--<form th:action="@{/tickets/{id}/comment/new (id=${selectedticket.getId()})}" method="post" th:object="${comment}">-->
 
-    <div class="p-3 p-lg-5 border">
-        <div class="form-group row">
-            <div class="col-md-6">
-                <label for="c_price" class="text-black">New Comment<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="c_price" th:field="*{commentDesc}">
+<!--    <div class="p-3 p-lg-5 border">-->
+<!--        <div class="form-group row">-->
+<!--            <div class="col-md-6">-->
+<!--                <label for="c_price" class="text-black">New Comment<span class="text-danger">*</span></label>-->
+<!--                <input type="text" class="form-control" id="c_price" th:field="*{commentDesc}">-->
 
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="form-group row">-->
+<!--            <div class="col-lg-12">-->
+<!--                <input type="submit" class="btn btn-primary btn-lg btn-block" value="Add Comment">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
+
+<br>
+<br>
+<br>
+<!--<div th:if="${currentuser.email.equals(selectedticket.author.email) or currentuser.email.equals(selectedticket.responsible.email)} and ${selectedticket.getStatus().toString().equals('OPEN')}">-->
+<!--    <form th:action="@{/tickets/{id}/close (id=${selectedticket.getId()})}" method="post">-->
+<!--        <input type="submit" class="btn btn-primary btn-lg btn-block" value="Close Ticket">-->
+
+<!--    </form>-->
+<!--</div>-->
+<hr>
+<!--adding photo-->
+<div>
+
+<!--    <div>-->
+<!--        <form th:object="${selectedticket}" method="POST" enctype="multipart/form-data" th:action="@{/tickets/upload}">-->
+<!--            <table>-->
+<!--                <tr><td>File to upload:</td><td><input type="file" name="file" th:field="*{ticketPhoto}" /></td></tr>-->
+<!--                <tr><td></td><td><input type="submit" value="Upload" /></td></tr>-->
+<!--            </table>-->
+<!--        </form>-->
+<!--    </div>-->
+
+    <form  class="form-horizontal" th:object="${selectedticket}" th:action="@{/tickets/upload}" method="post" enctype="multipart/form-data">
+<!--        <input type="hidden" th:field="*{id}"/>-->
+<!--        <div class="form-group">-->
+<!--            <label class="col-sm-2 control-label">Ticket Name</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input class="form-control" th:field="*{description}"/>-->
+<!--            </div>-->
+<!--        </div>-->
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Ticket Photo</label>
+            <div class="col-sm-10">
+                <input name="file" type="file" class="form-control" th:field="*{ticketPhoto}"/>
             </div>
         </div>
-
-        <div class="form-group row">
-            <div class="col-lg-12">
-                <input type="submit" class="btn btn-primary btn-lg btn-block" value="Add Comment">
-            </div>
+        <div class="row">
+            <button type="submit" class="btn btn-default">Save</button>
         </div>
-    </div>
-</form>
-
-<br>
-<br>
-<br>
-<div th:if="${currentuser.email.equals(selectedticket.author.email) or currentuser.email.equals(selectedticket.responsible.email)} and ${selectedticket.getStatus().toString().equals('OPEN')}">
-    <form th:action="@{/tickets/{id}/close (id=${selectedticket.getId()})}" method="post">
-        <input type="submit" class="btn btn-primary btn-lg btn-block" value="Close Ticket">
-
     </form>
 </div>
-<hr>
+
+
 <p>
     <a href="../home.html" th:href="@{/}">Return to home</a>
 </p>
