--- a/src/main/resources/templates/ticketDetails.html
+++ b/src/main/resources/templates/ticketDetails.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h1>TICKET DETAILS:</h1>
-<p th:text="'ID: ' + ${selectedticket.getId()}"></p>
-<p th:text="'TITLE: ' + ${selectedticket.getTitle()}"></p>
-<p th:text="'DESCRIPTION: ' + ${selectedticket.getDescription()}"></p>
-<p th:text="'PROPOSED SOLUTION: ' + ${selectedticket.getProposedSolution()}"></p>
+<p th:text="'ID: ' + ${selectedTicket.getId()}"></p>
+<p th:text="'TITLE: ' + ${selectedTicket.getTitle()}"></p>
+<p th:text="'DESCRIPTION: ' + ${selectedTicket.getDescription()}"></p>
+<p th:text="'PROPOSED SOLUTION: ' + ${selectedTicket.getProposedSolution()}"></p>
 <p th:text="'PHOTO : '"></p>
 <img th:src="*{'data:photo/png;base64,'+photo}" alt="" />
 
@@ -26,7 +26,7 @@
     </tr>
 
 
-    <tr th:each="comment : ${selectedticket.getComments()}">
+    <tr th:each="comment : ${selectedTicket.getComments()}">
         <td th:text="${comment.getId()}"></td>
         <td th:text=" ${comment.getCreatedOn()}"></td>
         <td th:text="${comment.getAuthor().getNameSurename()}"></td>
@@ -35,7 +35,7 @@
     </tr>
 </table>
 
-<form th:action="@{/tickets/{id}/comment/new (id=${selectedticket.getId()})}" method="post" th:object="${comment}">
+<form th:action="@{/tickets/{id}/comment/new (id=${selectedTicket.getId()})}" method="post" th:object="${comment}">
 
     <div class="p-3 p-lg-5 border">
         <div class="form-group row">
@@ -57,8 +57,8 @@
 <br>
 <br>
 <br>
-<div th:if="${currentuser.email.equals(selectedticket.author.email) or currentuser.email.equals(selectedticket.responsible.email)} and ${selectedticket.getStatus().toString().equals('OPEN')}">
-    <form th:action="@{/tickets/{id}/close (id=${selectedticket.getId()})}" method="post">
+<div th:if="${currentUser.email.equals(selectedTicket.author.email) or currentUser.email.equals(selectedTicket.responsible.email)} and ${selectedTicket.getStatus().toString().equals('OPEN')}">
+    <form th:action="@{/tickets/{id}/close (id=${selectedTicket.getId()})}" method="post">
         <input type="submit" class="btn btn-primary btn-lg btn-block" value="Close Ticket">
 
     </form>
@@ -66,7 +66,7 @@
 <hr>
 <!--adding photo-->
 <div>
-    <form  class="form-horizontal" th:object="${selectedticket}" th:action="@{/tickets/__${selectedticket.getId()}__/upload}" method="post" enctype="multipart/form-data">
+    <form  class="form-horizontal" th:object="${selectedTicket}" th:action="@{/tickets/__${selectedTicket.getId()}__/upload}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label class="col-sm-2 control-label">Ticket Photo</label>
             <div class="col-sm-10">
