--- a/src/main/resources/templates/userDashboard.html
+++ b/src/main/resources/templates/userDashboard.html
@@ -24,6 +24,8 @@
 </div>
 
 <br>
+<p style="color: crimson" th:if="${newTicketMsg}" th:text="${newTicketMsg}"></p>
+<p style="color: crimson" th:if="${tickedClosedMsg}" th:text="${tickedClosedMsg}"></p>
 
 <hr>
 <br>
