fix searching main page

--- a/src/main/resources/templates/newTicket.html
+++ b/src/main/resources/templates/newTicket.html
@@ -20,7 +20,12 @@
             <div class="col-md-6">
                 <label for="c_price" class="text-black">Description<span class="text-danger"></span></label>
                 <input type="text" class="form-control" id="c_price" th:field="*{description}" required>
-                <div th:if="${#fields.hasErrors('description')}" th:text="${#fields.errors('description')}"></div>
+<!--                <div th:if="${#fields.hasErrors('description')}" th:text="${#fields.errors('description')}"></div>-->
+                <div th:if="${#fields.hasErrors('description')}">
+                    <p th:each="err :${#fields.errors('description')}" th:text="${err}">
+
+                    </p>
+                </div>
             </div>
             <br>
             <div class="col-md-6">
